--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.17",
     "turbo": "^2.3.3",
     "typescript": "5.5.4"
   },
@@ -19,5 +20,10 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@react-spring/web": "^9.7.5",
+    "@types/next-auth": "^3.13.0",
+    "next-auth": "^4.24.11"
+  }
 }
